--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "spotify-serverless-api",
+  "name": "donat-spotify-serverless-api",
+  "repository": {
+    "url": "https://github.com/odonatojunior/spotify-serverless-api"
+  },
   "version": "1.0.0",
   "main": "api/index.ts",
   "author": "Donato Jr",
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@vercel/node": "^2.5.25",
+    "@vercel/node": "^2.8.4",
     "vercel": "^28.4.11"
   },
   "dependencies": {
