--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
+    "target": "ES6",
+    "module": "ES6",
     "lib": [
       "ESNext"
     ],
@@ -15,9 +15,5 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "skipLibCheck": true
-  },
-  "include": [
-    "api/**/*",
-    "lib/**/*",
-  ]
+  }
 }
